2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/basetyps.h (REFFMTID): Define properly.

2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winnt.h (WT_SET_MAX_THREADPOOL_THREADS): Define.
	Thanks to:    Bruce M Simpson <bms_spc at sf dot net>

2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/ipifcons.h (MIN_IF_TYPE,IF_TYPE_*,MAX_IF_TYPE,IF_ACCESS_*,
	IF_CHECK_*,IF_CONNECTION_*,IF_ADMIN_*,IF_OPER_*): Define.
	* include/winbase.h (CancelWaitableTimer,UnregisterWait):
	Add function declaration.
	* include/mgm.h: New file.
	* lib/rtm.def: New file.
	Thanks to:    Bruce M Simpson <bms_spc at sf dot net>

2006-04-24  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/ws2tcpip.h (gai_strerror): Remove thread-safety comment.
	This function cannot be made thread-safe, the API would have to be
	changed for that, just like strerror() -> strerror_r() and similar
	ISO C or POSIX functions...

2006-04-19  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/edevdefs.h: New file.

2006-04-19  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mmsystem.h (_LPCWAVEFORMATEX_DEFINED): Define.
	Use as guard for the WAVEFORMATEX structure instead of
	_WAVEFORMATEX_ to avoid clashes with DirectSound. Keep
	_WAVEFORMATEX_ for compatibility.
	Thanks to:    Andrew Jones <guln at sf dot net>

2006-04-19  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (CharNextEx,CharNextExW,CharPrevEx,CharPrevExW):
	Delete. Only CharNextExA and CharPrevExA are documented in MSDN.
	Thanks to:    David Golub <david_golub at sf dot net>

2006-04-18  Eric House  <ehouse@eehouse.org>

	PocketPC support.
	* include/aygshell.h: New file [_WIN32_WCE]. Declare most common
	functions for using aygshell on PocketPC:
	SHCreateMenuBar, SHFindMenuBar, SHCreateNewItem, SHFullScreen,
	SHSipInfo, SHHandleWMActivate, SHHandleWMSettingChange
